--- a/app_model/app.ipynb
+++ b/app_model/app.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -64,25 +64,22 @@
      "output_type": "stream",
      "text": [
       " * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [13/Dec/2022 13:45:39] \"GET / HTTP/1.1\" 200 -\n",
-      "[2022-12-13 13:45:51,505] ERROR in app: Exception on / [POST]\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/mm7/opt/anaconda3/lib/python3.9/site-packages/flask/app.py\", line 2447, in wsgi_app\n",
-      "    response = self.full_dispatch_request()\n",
-      "  File \"/Users/mm7/opt/anaconda3/lib/python3.9/site-packages/flask/app.py\", line 1952, in full_dispatch_request\n",
-      "    rv = self.handle_user_exception(e)\n",
-      "  File \"/Users/mm7/opt/anaconda3/lib/python3.9/site-packages/flask/app.py\", line 1821, in handle_user_exception\n",
-      "    reraise(exc_type, exc_value, tb)\n",
-      "  File \"/Users/mm7/opt/anaconda3/lib/python3.9/site-packages/flask/_compat.py\", line 39, in reraise\n",
-      "    raise value\n",
-      "  File \"/Users/mm7/opt/anaconda3/lib/python3.9/site-packages/flask/app.py\", line 1950, in full_dispatch_request\n",
-      "    rv = self.dispatch_request()\n",
-      "  File \"/Users/mm7/opt/anaconda3/lib/python3.9/site-packages/flask/app.py\", line 1936, in dispatch_request\n",
-      "    return self.view_functions[rule.endpoint](**req.view_args)\n",
-      "  File \"/var/folders/nz/9d3x6fy96471qphd5lqvs7yc0000gn/T/ipykernel_5816/251551456.py\", line 9, in app_calculation\n",
-      "    param_lst.append(float(param))\n",
-      "TypeError: float() argument must be a string or a number, not 'NoneType'\n",
-      "127.0.0.1 - - [13/Dec/2022 13:45:51] \"POST / HTTP/1.1\" 500 -\n"
+      "127.0.0.1 - - [13/Dec/2022 13:50:14] \"GET / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Model was constructed with shape (None, None) for input KerasTensor(type_spec=TensorSpec(shape=(None, None), dtype=tf.float32, name='normalization_input'), name='normalization_input', description=\"created by layer 'normalization_input'\"), but it was called on an input with incompatible shape (None,).\n",
+      "1/1 [==============================] - 0s 170ms/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [13/Dec/2022 13:50:30] \"POST / HTTP/1.1\" 200 -\n"
      ]
     }
    ],
